_includes/manuals/1.3/2.1_quickstart_installation.md

[The Foreman installer](/manuals/{{page.version}}/index.html#3.2ForemanInstaller) uses Puppet to install Foreman. This guide assumes that you've already installed Puppet (without a master), but the installer will setup Foreman and the puppet master with Passenger and the [Smart Proxy](/manuals/{{page.version}}/index.html#4.3SmartProxies) by default.

#### Downloading the installer

For **Red Hat variants**, run this (replace 'el6' with 'f18' or 'f19' as appropriate):

{% highlight bash %}
yum -y install http://yum.theforeman.org/releases/{{page.version}}/el6/x86_64/foreman-release.rpm
yum -y install foreman-installer
{% endhighlight %}

For **Debian variants**, run this (replace 'wheezy' with 'precise' if on Ubuntu 12.04, or 'squeeze' for Debian 6):

{% highlight bash %}
echo "deb http://deb.theforeman.org/ wheezy stable" > /etc/apt/sources.list.d/foreman.list
wget -q http://deb.theforeman.org/foreman.asc -O- | apt-key add -
apt-get update && apt-get install foreman-installer
{% endhighlight %}

#### Running the installer

The procedure is can be either fully interactive, allowing changes to the
configuration and then the option is given to run Puppet to perform the
installation, or non-interactive.

To run interactive installer do

{% highlight bash %}
foreman-install -i
{% endhighlight %}

To start installation in non-interactive mode, specify all the options with
parameters. You can review them in the table bellow, or using `--help` option.

{% highlight bash %}
foreman-install --foreman-param1 value1 --foreman-param2 value2 ...
{% endhighlight %}

After Puppet runs, Foreman will be accessible at `https://fqdn/` with a
default username/password of "admin" and "changeme".  To complete the
installation, click on *More > Configuration > Smart Proxies* and add a new
proxy with the URL `https://fqdn:8443/`.

#### Installer options

<div id='installer-options'>
<table class="table table-bordered table-condensed">
  <thead>
    <tr>
      <th>Option</th>
      <th>Description</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>--foreman-param1</td>
      <td>Blah blah blah</td>
    </tr>
  </tbody>
</table>
</div>
